resolved bonus elements (adding new css file for readability)

--- a/css/book.css
+++ b/css/book.css
@@ -24,7 +24,7 @@ main {
 }
 
 .page {
-    height:65vh;
+    height:auto;
     padding: 3vw;
     width: 50%;
     background-blend-mode: multiply;
@@ -43,9 +43,6 @@ main {
     flex-direction: column;
     justify-content: space-between;
 }
-
-
-
 
 .desktop {
     display: flex;
@@ -152,7 +149,7 @@ main {
         margin: 0;
     }
     .page {
-        height: 100vh;
+        min-height: 100vh;
         width: auto;
     }
     .desktop {
